--- a/src/resources/database.properties
+++ b/src/resources/database.properties
@@ -1,7 +1,6 @@
-jdbc.DriverClassName=com.mysql.jdbc.Driver
-jdbc.Url=jdbc:mysql://localhost:8889/masterblog?useSSL=false
+jdbc.DriverClassName=com.mysql.cj.jdbc.Driver
+jdbc.Url=jdbc:mysql://localhost:3306/masterblog?serverTimezone=UTC
 jdbc.Username=root
-jdbc.Password=2611
 hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
