Role Security | Filter Needs V1

--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,15 @@
       <version>1.18.12</version>
     </dependency>
 
+
+    <!-- Adding CKEditor for coold edited text -->
+
+    <dependency>
+      <groupId>com.ckeditor</groupId>
+      <artifactId>ckeditor-java-core</artifactId>
+      <version>3.5.3</version>
+    </dependency>
+
 </dependencies>
 
 
